<<<<<<< Updated upstream
[gd_scene load_steps=22 format=2]
=======
<<<<<<< HEAD
<<<<<<< HEAD
[gd_scene load_steps=16 format=2]
=======
[gd_scene load_steps=22 format=2]
>>>>>>> 17ecf8b4cb9e50d1323ab8501f4999ede841542d
=======
[gd_scene load_steps=22 format=2]
>>>>>>> 17ecf8b4cb9e50d1323ab8501f4999ede841542d
>>>>>>> Stashed changes

[ext_resource path="res://Scenes/Chib.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/monkeyFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/scripts/chibName.gd" type="Script" id=3]
[ext_resource path="res://Scenes/scripts/feedingTscn.gd" type="Script" id=4]
[ext_resource path="res://Scenes/scripts/Settingsmenu.gd" type="Script" id=5]
[ext_resource path="res://Images/cog.png" type="Texture" id=7]
[ext_resource path="res://Images/1413908.png" type="Texture" id=8]
[ext_resource path="res://Images/background.webp" type="Texture" id=9]
[ext_resource path="res://foodImg/smallbackbanana.png" type="Texture" id=10]
[ext_resource path="res://foodImg/smallbacklemon.png" type="Texture" id=11]
[ext_resource path="res://foodImg/smallbackorange.png" type="Texture" id=12]
[ext_resource path="res://foodImg/smallbackapple.png" type="Texture" id=13]
[ext_resource path="res://foodImg/smallbackmango.png" type="Texture" id=14]
[ext_resource path="res://Images/Coin.png" type="Texture" id=15]
[ext_resource path="res://foodImg/smallbackboostr.png" type="Texture" id=16]
[ext_resource path="res://foodImg/smallbackboostb.png" type="Texture" id=17]
[ext_resource path="res://foodImg/smallbackboostp.png" type="Texture" id=18]
[ext_resource path="res://foodImg/smallbackboostg.png" type="Texture" id=19]
[ext_resource path="res://foodImg/smallbackboosty.png" type="Texture" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.788235, 0.698039, 0.698039, 1 )
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.596078, 0.0196078, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="FeedingTscn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -3281, -442 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 538, 1338.45 )
scale = Vector2( 3.249, 4.46817 )
texture = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -537.0
margin_top = -147.0
margin_right = 537.0

[node name="feedBTN" type="Button" parent="HBoxContainer"]
margin_right = 355.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Feed"

[node name="gamesBTN" type="Button" parent="HBoxContainer"]
margin_left = 359.0
margin_right = 714.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Mini-Games"

[node name="graveBTN" type="Button" parent="HBoxContainer"]
margin_left = 718.0
margin_right = 1074.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Grave yard"

[node name="settingsBTN" type="Button" parent="."]
anchor_left = 0.914
anchor_top = 0.051
anchor_right = 0.914
anchor_bottom = 0.051
margin_left = -3.12006
margin_top = -84.92
margin_right = 84.8799
margin_bottom = 4.07999
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="shopBTN" type="Button" parent="."]
anchor_left = 0.09
anchor_top = 0.051
anchor_right = 0.09
anchor_bottom = 0.051
margin_left = -87.2
margin_top = -85.92
margin_right = -0.200005
margin_bottom = 0.0799942
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="Chib" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 534, 505 )

[node name="Settingspopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.46
anchor_right = 0.5
anchor_bottom = 0.46
margin_left = -405.0
margin_top = -608.2
margin_right = -346.0
margin_bottom = -444.2
rect_scale = Vector2( 14.2704, 7.4162 )

[node name="VBoxContainer" type="VBoxContainer" parent="Settingspopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -90.0
margin_right = 25.5
margin_bottom = 90.0
custom_constants/separation = 10

[node name="saveButton" type="Button" parent="Settingspopup/VBoxContainer"]
margin_right = 51.0
margin_bottom = 20.0
text = "SAVE"
script = ExtResource( 5 )

[node name="backButton" type="Button" parent="Settingspopup/VBoxContainer"]
margin_top = 30.0
margin_right = 51.0
margin_bottom = 50.0
text = "BACK"
script = ExtResource( 5 )

[node name="quitButton" type="Button" parent="Settingspopup/VBoxContainer"]
margin_top = 60.0
margin_right = 51.0
margin_bottom = 80.0
text = "QUIT"
script = ExtResource( 5 )

[node name="SFXLbl" type="Label" parent="Settingspopup/VBoxContainer"]
margin_top = 90.0
margin_right = 51.0
margin_bottom = 104.0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Settingspopup/VBoxContainer"]
margin_top = 114.0
margin_right = 51.0
margin_bottom = 130.0
min_value = -30.0
max_value = 0.0

[node name="musicLbl" type="Label" parent="Settingspopup/VBoxContainer"]
margin_top = 140.0
margin_right = 51.0
margin_bottom = 154.0
text = "MUSIC"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="Settingspopup/VBoxContainer"]
margin_top = 164.0
margin_right = 51.0
margin_bottom = 180.0
min_value = -30.0
max_value = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 316.0
margin_top = 93.0
margin_right = 830.0
margin_bottom = 207.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 514.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
script = ExtResource( 3 )

[node name="TempFoodHolder" type="HBoxContainer" parent="."]
margin_left = 11.0
margin_top = 1559.0
margin_right = 1867.0
margin_bottom = 1751.0

[node name="applebtn" type="Button" parent="TempFoodHolder"]
margin_right = 182.0
margin_bottom = 192.0
icon = ExtResource( 13 )

[node name="bananabtn" type="Button" parent="TempFoodHolder"]
margin_left = 186.0
margin_right = 368.0
margin_bottom = 192.0
icon = ExtResource( 10 )

[node name="lemonbtn" type="Button" parent="TempFoodHolder"]
margin_left = 372.0
margin_right = 554.0
margin_bottom = 192.0
icon = ExtResource( 11 )

[node name="mangobtn" type="Button" parent="TempFoodHolder"]
margin_left = 558.0
margin_right = 740.0
margin_bottom = 192.0
icon = ExtResource( 14 )

[node name="orangebtn" type="Button" parent="TempFoodHolder"]
margin_left = 744.0
margin_right = 926.0
margin_bottom = 192.0
icon = ExtResource( 12 )

[node name="enhancerBbtn" type="Button" parent="TempFoodHolder"]
margin_left = 930.0
margin_right = 1112.0
margin_bottom = 192.0
icon = ExtResource( 17 )

[node name="enhancerGbtn" type="Button" parent="TempFoodHolder"]
margin_left = 1116.0
margin_right = 1298.0
margin_bottom = 192.0
icon = ExtResource( 19 )

[node name="enhancerPbtn" type="Button" parent="TempFoodHolder"]
margin_left = 1302.0
margin_right = 1484.0
margin_bottom = 192.0
icon = ExtResource( 18 )

[node name="enhancerRbtn" type="Button" parent="TempFoodHolder"]
margin_left = 1488.0
margin_right = 1670.0
margin_bottom = 192.0
icon = ExtResource( 16 )

[node name="enhancerYbtn" type="Button" parent="TempFoodHolder"]
margin_left = 1674.0
margin_right = 1856.0
margin_bottom = 192.0
icon = ExtResource( 20 )

[node name="CoinContainer" type="Container" parent="."]
margin_left = 902.0
margin_top = 111.0
margin_right = 1070.0
margin_bottom = 151.0

[node name="CoinCount" type="Label" parent="CoinContainer"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 5, 5 )

[node name="Sprite" type="Sprite" parent="CoinContainer"]
position = Vector2( 143, 31 )
scale = Vector2( 0.475155, 0.475155 )
texture = ExtResource( 15 )

[connection signal="pressed" from="HBoxContainer/feedBTN" to="." method="_on_feedBTN_pressed"]
[connection signal="pressed" from="HBoxContainer/graveBTN" to="." method="_on_graveBTN_pressed"]
[connection signal="pressed" from="Settingspopup/VBoxContainer/backButton" to="Settingspopup/VBoxContainer/backButton" method="_on_backButton_pressed"]
[connection signal="pressed" from="Settingspopup/VBoxContainer/quitButton" to="Settingspopup/VBoxContainer/quitButton" method="_on_quitButton_pressed"]
[connection signal="gui_input" from="TempFoodHolder" to="." method="_on_TempFoodHolder_gui_input"]
[connection signal="pressed" from="TempFoodHolder/applebtn" to="." method="_on_applebtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/bananabtn" to="." method="_on_bananabtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/lemonbtn" to="." method="_on_lemonbtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/mangobtn" to="." method="_on_mangobtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/orangebtn" to="." method="_on_orangebtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/enhancerBbtn" to="." method="_on_enhancerBbtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/enhancerGbtn" to="." method="_on_enhancerGbtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/enhancerPbtn" to="." method="_on_enhancerPbtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/enhancerRbtn" to="." method="_on_enhancerRbtn_pressed"]
[connection signal="pressed" from="TempFoodHolder/enhancerYbtn" to="." method="_on_enhancerYbtn_pressed"]
